@@ -1,3 +1,10 @@
+commit: fc1eb51008e236b449b9eb88cb56867d39bc34d0
+Author: Wed Mar 31 23:01:24 2010 -0300
+  Date: Otvio Fernandes <otaviof@gmail.com>
+
+	working on assync write
+
+
 commit: 279ce3632fd17b61c7d09b6b1f4f730aebfb8c01
 Author: Wed Mar 31 00:16:39 2010 -0300
   Date: Otávio Fernandes <otaviof@gmail.com>
